refactor!: jigsaw