@@ -20,5 +20,6 @@ object Properties {
 	const val FORGEJO_COMITISH = Versions.MINECRAFT
 
 	val JAVAC_ARGS = listOf<String>(
+		"--add-reads", "mixinextras.common=ALL-UNNAMED"
 	)
 }
